embedded-c/my_workspace/target/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:49:41 **** Incremental Build of configuration Debug for project 007keypad ****
make -j4 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DNUCLEO_F401RE -DSTM32 -DSTM32F401RETx -DSTM32F4 -c -I../Inc -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Src/main.o"
../Src/main.c:23:4: warning: #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use." [-Wcpp]
   23 |   #warning "FPU is not initialized, but the project is compiling for an FPU. Please initialize the FPU before use."
      |    ^~~~~~~
../Src/main.c: In function 'main':
../Src/main.c:55:9: error: invalid operands to binary * (have 'int' and 'volatile uint32_t *' {aka 'volatile long unsigned int *'})
   55 |         *pGPIOAModeReg &= AclearMask;
      |         ^
make: *** [Src/subdir.mk:25: Src/main.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.
